Set up angular ui.router for smarter routing

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,6 +30,8 @@
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
 </div>
+<a ui-sref=".list" class="btn btn-primary">List</a>
+<div ui-view></div>
 
 <div class="footer">
   <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
