--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,3 @@
-<div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="subject">Subject</a></li>
-    <li><a ng-href="#">Contact</a></li>
-  </ul>
-  <h3 class="text-muted">pilvivayla terminators</h3>
-</div>
-
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
@@ -30,7 +21,8 @@
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
 </div>
-<a ui-sref=".list" class="btn btn-primary">List</a>
+ 
+<a ui-sref=".list" class="button primary">List</a>
 <div ui-view></div>
 
 <div class="footer">
