--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,30 +1,30 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="row">
+  <div class="medium-9 columns">
+    <div class="jumbotron">
+      <h1>'Allo, 'Allo!</h1>
+      <p class="lead">
+        <img src="images/yeoman.png" alt="I'm Yeoman"><br>
+        Always a pleasure scaffolding your apps.
+      </p>
+      <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+    </div>
+  </div>
+  <div class="medium-3 columns">
+    <a class="button primary">Image bank</a>
+    <a class="button primary">Magazine</a>
+    <a class="button primary">Your library</a>
+  </div>
+</div>
+<div class="row">
+  <div class="medium-6 columns">
+    <h2>Collections</h2>
+    <p>Collections come here</p>
+    <a ui-sref=".list" class="button primary">List</a>
+  </div>
+  <div class="medium-6 columns">
+    <h2>A video</h2>
+    <p>Something else comes here</p>
+  </div>
+  <div ui-view></div>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
- 
-<a ui-sref=".list" class="button primary">List</a>
-<div ui-view></div>
-
-<div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-</div>
