--- a/app/views/subject.html
+++ b/app/views/subject.html
@@ -1,21 +1,19 @@
-<div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
-  </ul>
-  <h3 class="text-muted">pilvivayla terminators</h3>
-</div>
+<div ng-controller="SubjectCtrl" id="subjectPage">
+  <div class="jumbotron row">
+    <div class="large-12 columns">
+      <h1>{{ title }}</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="medium-8 columns">
 
-<div class="jumbotron">
-  <h1>This is a subject page!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+    </div>
+    <div class="medium-4 columns">
+      <nav class="side-nav">
+        <ul>
+          <li ng-repeat="subcategory in subcategories"><a href="#">{{subcategory}}</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </div>
