--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,17 +2,12 @@
   <div class="medium-9 columns">
     <div class="jumbotron">
       <h1>'Allo, 'Allo!</h1>
-      <p class="lead">
-        <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-        Always a pleasure scaffolding your apps.
-      </p>
-      <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
     </div>
   </div>
-  <div class="medium-3 columns">
-    <a class="button primary">Image bank</a>
-    <a class="button primary">Magazine</a>
-    <a class="button primary">Your library</a>
+  <div class="medium-3 columns frontpage-buttons">
+    <div class="medium-12 columns">Image bank</div>
+    <div class="medium-12 columns">Magazine</div>
+    <div class="medium-12 columns">Your library</div>
   </div>
 </div>
 <div class="row">
