--- a/app/styles/foundation/_settings.scss
+++ b/app/styles/foundation/_settings.scss
@@ -41,7 +41,7 @@ $blue: #00aeef;
 // We use these to control various global styles
 // $body-bg: #fff;
 // $body-font-color: #222;
-$body-font-family: "Open Sans", "Trebuchet Ms", sans-serif;
+$body-font-family: "Open Sans Light", "Trebuchet Ms", sans-serif;
 $body-font-weight: 300;
 // $body-font-style: normal;
 
@@ -128,10 +128,10 @@ $primary-color: $blue;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-// $h1-font-size: rem-calc(44);
-// $h2-font-size: rem-calc(37);
-// $h3-font-size: rem-calc(27);
-// $h4-font-size: rem-calc(23);
+$h1-font-size: rem-calc(44);
+$h2-font-size: rem-calc(30);
+$h3-font-size: rem-calc(22);
+$h4-font-size: rem-calc(16);
 // $h5-font-size: rem-calc(18);
 // $h6-font-size: 1rem;
 
@@ -1169,7 +1169,7 @@ $primary-color: $blue;
 
 
 // Background color for the top bar
-$topbar-bg-color: $blue;
+$topbar-bg-color: #7EC1E0; 
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
