--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,14 +8,48 @@ $mutedBlack: #333;
 
 
 @import 'foundation';
+//@import 'iconfont/style.css';
 
 // bower:scss
 // endbower
 
-
-
+body {
+    min-width: 100%;
+    height: 100%;
+    padding-left: 50px;
+}
+.top-bar {
+    select {
+        margin-top: 0.3em;
+        margin-bottom: 0;
+    }
+}
+.header {
+    h1, p {
+     text-align: center;
+    }
+}
+header {
+    padding: 2em 0;
+    .breadcrumb {
+        color: $blue;
+        i {
+            position: relative;
+            top: 1px;
+            margin-left: 0.5em;
+        }
+    }
+    h1 {
+        margin-top: -0.1em;
+    }
+    &.row .back {
+        i {
+            font-size: 5em;
+        }
+    }
+}
 .row {
-    max-width: inherit;
+   max-width: 1300px;
 }
 .browsehappy {
     margin: 0.2em 0;
@@ -23,13 +57,116 @@ $mutedBlack: #333;
     color: #000;
     padding: 0.2em 0;
 }
+.search {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    font-size: 2em;
+}
 .frontpage-buttons div {
     padding: 1em;
     background: $blue;
 }
-#sidebar {
-    padding-left: 0; 
-    .side-nav {
+.navCollapsed .page {
+    -ms-transform: translate(0px, 0);
+    -moz-transform: translate(0px, 0);
+    -webkit-transform: translate3d(0px, 0, 0);
+    transform: translate(0px, 0);
+}
+.page {
+    -ms-transform: translate(150px, 0);
+    -moz-transform: translate(150px, 0);
+    -webkit-transform: translate3d(150px, 0, 0);
+    transform: translate(150px, 0);
+    -ms-transition: -ms-transform 0.28s ease-in-out;
+    -moz-transition: -moz-transform 0.28s ease-in-out;
+    -webkit-transition: -webkit-transform 0.28s ease-in-out;
+    transition: transform 0.28s ease-in-out;
+}
+.sidebar {
+    position: fixed; 
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 200px;
+    background: $blue;
+    box-shadow: 0 0 3px #222;
+    overflow-x: hidden;
+    overflow-y: auto;
+    overflow: hidden;
+    -moz-transition: width ease-in-out 0.28s, background linear 0.1s;
+    -webkit-transition: width ease-in-out 0.28s, background linear 0.1s;
+    -o-transition: width ease-in-out 0.28s, background linear 0.1s;
+    transition: width ease-in-out 0.28s, background linear 0.1s;
+    -ms-transform: translate(0px, 0);
+    -moz-transform: translate(0px, 0);
+    -webkit-transform: translate3d(0px, 0, 0);
+    transform: translate(0px, 0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+
+    .navCollapsed &{
+        width: 50px;
+    }
+    ul {
+        list-style: none;
+        margin: 0;
+        width: 200px;
+
+        li a {
+            display: block;
+            color: #fff;
+            border-bottom: 1px solid #eee;
+            padding: 1em 0;
+            &:hover {
+                background: $mutedBlack;
+            }
+            &.active {
+                background: $mutedBlack;
+            }
+            i {
+                font-size: 1.6em;
+                display: block;
+                width: 2em;
+                float: left;
+                text-align: center;
+            }
+        }
+    }
+}
+.page {
+    padding-right: 0;
+    padding-left: 0;
+    background: #fff;
+}
+
+.subjects {
+    overflow: hidden;
+    padding-left: 0;
+
+    .subjectCover {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: $blue;
+        h1 {
+            color: #fff;
+            text-align: center;
+            margin-top: 3em;
+        }
+        &.coverCollapsed {
+            top: 0;
+            left: -100%;
+        }
+    }    
+
+    ul {
+        list-style: none;
         li {
             margin: 0;
             a {
@@ -38,7 +175,7 @@ $mutedBlack: #333;
                 color: #777;
             }        
         }
-        .subjects {
+        .subject {
             ul {
                 list-style: none;
                 border-left: 5px solid #ddd;
@@ -63,56 +200,59 @@ $mutedBlack: #333;
     }
 }
 
+#itemPage {
+    .background {
+        background: #DBDBDB;
+    }
+    header {
+        padding: 3em 0 5em;
+        margin-bottom: 2em;
+        h1 {
+            color: #777;
+            margin-bottom: 0;
+        }
+        .rating, .specs {
+            color: #777;
+        }
+    }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-    padding-left: 15px;
-    padding-right: 15px;
+    .toprow {
+        //margin-bottom: 2em;
+        padding-bottom: 2em;
+        .item-picture {
+            background: url("http://upload.wikimedia.org/wikipedia/commons/2/24/Gorilla_gorilla11.jpg"); 
+            height: 23em;
+            border-radius: 3px;
+            margin-bottom: 2em;
+        }
+
+        ul {
+            padding: 1em;
+            
+            border-radius: 3px;
+            list-style-type: none;
+            margin-left: 0;
+            background: lighten($blue, 30%);
+            border: 1px solid #fff;
+            li {
+                 color: #888;
+            }
+        }
+    }
+    aside {
+        h3 {
+            border-bottom: 1px solid #aaa;
+        }
+        p {
+            font-size: 1.2em;
+            //padding: 1em;
+            color: #444;
+        }
+    }
+    .left-col {
+        padding-top: 2em;
+        padding-bottom: 2em;
+        border-right: 2px solid $blue;
+        background: #EFF7FF;
+    }
 }
-
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
-}
-
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-    margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-    margin: 40px 0;
-}
-
-.marketing p + h4 {
-    margin-top: 28px;
-}
-
