--- a/app/views/subjects.html
+++ b/app/views/subjects.html
@@ -11,6 +11,9 @@
 			<input type="text" placeholder="Search within Geometry..">
 		</div>
 	</header>
+	<div class="row">
+		<p>Filter:</p>
+	</div>
 
 
 </div>
