--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,7 @@ body {
 .header {
     h1, p {
      text-align: center;
+     color: #fff; 
     }
 }
 header {
@@ -57,12 +58,7 @@ header {
     color: #000;
     padding: 0.2em 0;
 }
-.search {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    font-size: 2em;
-}
+
 .frontpage-buttons div {
     padding: 1em;
     background: $blue;
@@ -143,27 +139,146 @@ header {
     background: #fff;
 }
 
-.subjects {
-    overflow: hidden;
-    padding-left: 0;
+.hex {
+    display: inline-block;
+    vertical-align: middle;
+  width:150px;
+  height:86px;
+  background-color: #ccc;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;     
+  background-size: auto 173px;              
+  position: relative;
+  float: none;
+margin: 24px 0px;
+  text-align:center;
+  zoom:1;
+}
+    
+.hex.hex-gap {
+margin-left: 86px;
+}
 
-    .subjectCover {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: $blue;
-        h1 {
-            color: #fff;
-            text-align: center;
-            margin-top: 3em;
-        }
-        &.coverCollapsed {
-            top: 0;
-            left: -100%;
-        }
-    }    
+.hex a {
+display:block;
+width: 100%;
+height:100%;
+text-indent:-9999em;
+position:absolute;
+top:0;
+left:0;
+}
+
+.hex .corner-1,
+.hex .corner-2 {
+position: absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background: inherit;                
+z-index:-2;           
+overflow:hidden;    
+    -webkit-backface-visibility: hidden;
+-moz-backface-visibility: hidden;
+-ms-backface-visibility: hidden;
+-o-backface-visibility: hidden;
+backface-visibility: hidden;       
+}
+
+.hex .corner-1 {
+z-index:-1;
+-webkit-transform: rotate(60deg);
+-moz-transform: rotate(60deg);
+-ms-transform: rotate(60deg);
+-o-transform: rotate(60deg);
+transform: rotate(60deg);
+}
+
+.hex .corner-2 {
+-webkit-transform: rotate(-60deg);
+-moz-transform: rotate(-60deg);
+-ms-transform: rotate(-60deg);
+-o-transform: rotate(-60deg);
+transform: rotate(-60deg);
+}
+
+.hex .corner-1:before,
+.hex .corner-2:before {
+width: 173px;
+height: 173px;
+content: '';
+position: absolute;
+background: inherit;
+top:0;
+left: 0;
+z-index: 1;
+background: inherit;
+background-repeat:no-repeat;
+-webkit-backface-visibility: hidden;
+-moz-backface-visibility: hidden;
+-ms-backface-visibility: hidden;
+-o-backface-visibility: hidden;
+backface-visibility: hidden;        
+}     
+
+
+.hex .corner-1:before {
+transform: rotate(-60deg) translate(-87px, 0px);  
+transform-origin: 0 0;
+}     
+
+.hex .corner-2:before {
+transform: rotate(60deg) translate(-48px, -11px); 
+bottom:0;
+}   
+
+
+
+/* Custom styles*/
+.hex .inner {   
+color:#eee;
+}
+
+.hex h4 {
+font-family: 'Josefin Sans', sans-serif;    
+margin:0;    
+margin-top: 1.5em;
+text-align: center; 
+}
+
+.hex hr {
+border:0;
+border-top:1px solid #eee;
+width:60%;
+margin:15px auto;
+}
+
+.hex p {
+font-size:16px;
+font-family: 'Kotta One', serif;
+width:80%;
+margin:0 auto;
+}
+
+.hex.hex-1 {
+background: #74cddb;
+}
+
+.hex.hex-2 {
+background: #f5c53c;
+}
+
+.hex.hex-3 {
+background: #80b971;
+}
+
+
+
+.subjects {
+    margin-top: 2em;
+    text-align: center; 
+    padding-left: 0; 
 
     ul {
         list-style: none;
@@ -199,14 +314,35 @@ header {
         }
     }
 }
-
+#homePage {
+    header {
+        background: url(/images/bazaar.jpg);
+        h1, h2 {
+            color: #fff;
+            text-align: center;
+        }
+        .search {
+            display: block;
+            padding: 1em;
+            border-radius: 0.5em;
+            width: 30em;
+            margin: 0 auto;
+        }
+    }
+}
 #itemPage {
+    .search {
+        position: absolute;
+        top: 1em;
+        right: 1em;
+        font-size: 2em;
+    }
     .background {
         background: #DBDBDB;
     }
     header {
         padding: 3em 0 5em;
-        margin-bottom: 2em;
+        margin-bottom: 3em;
         h1 {
             color: #777;
             margin-bottom: 0;
