--- a/app/styles/foundation/_settings.scss
+++ b/app/styles/foundation/_settings.scss
@@ -41,7 +41,7 @@ $blue: #00aeef;
 // We use these to control various global styles
 // $body-bg: #fff;
 // $body-font-color: #222;
-$body-font-family: "Open Sans Light", "Trebuchet Ms", sans-serif;
+$body-font-family: "Source Sans Pro", "Trebuchet Ms", sans-serif;
 $body-font-weight: 300;
 // $body-font-style: normal;
 
@@ -118,8 +118,8 @@ $primary-color: $blue;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-// $header-font-family: $body-font-family;
-// $header-font-weight: normal;
+$header-font-family: $body-font-family;
+$header-font-weight: 300;
 // $header-font-style: normal;
 // $header-font-color: #222;
 // $header-line-height: 1.4;
@@ -660,10 +660,10 @@ $h4-font-size: rem-calc(16);
 
 // $include-html-off-canvas-classes: $include-html-classes;
 
-// $tabbar-bg: #333;
+$tabbar-bg: #fff;
 // $tabbar-height: rem-calc(45);
 // $tabbar-line-height: $tabbar-height;
-// $tabbar-color: #fff;
+$tabbar-color: #444;
 // $tabbar-middle-padding: 0 rem-calc(10);
 
 // Off Canvas Divider Styles
