--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,387 +8,348 @@ $mutedBlack: #333;
 
 
 @import 'foundation';
+@import 'compass';
 //@import 'iconfont/style.css';
+@import 'navigation';
 
 // bower:scss
 // endbower
-
+p {
+	color: #444;
+}
 body {
-    min-width: 100%;
-    height: 100%;
-    padding-left: 50px;
+	min-width: 100%;
+	height: 100%;
+	padding-left: 50px;
 }
 .top-bar {
-    select {
-        margin-top: 0.3em;
-        margin-bottom: 0;
-    }
+	select {
+		margin-top: 0.3em;
+		margin-bottom: 0;
+	}
 }
 .header {
-    h1, p {
-     text-align: center;
-     color: #fff; 
-    }
+	h1, p {
+	 text-align: center;
+	 color: #fff; 
+	}
 }
 header {
-    padding: 2em 0;
-    .breadcrumb {
-        color: $blue;
-        i {
-            position: relative;
-            top: 1px;
-            margin-left: 0.5em;
-        }
-    }
-    h1 {
-        margin-top: -0.1em;
-    }
-    &.row .back {
-        i {
-            font-size: 5em;
-        }
-    }
+	padding: 2em 0;
+	.breadcrumb {
+		color: $blue;
+		i {
+			position: relative;
+			top: 1px;
+			margin-left: 0.5em;
+		}
+	}
+	h1 {
+		margin-top: -0.1em;
+	}
+	&.row .back {
+		i {
+			font-size: 5em;
+		}
+	}
 }
 .row {
    max-width: 1300px;
 }
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+	margin: 0.2em 0;
+	background: #ccc;
+	color: #000;
+	padding: 0.2em 0;
 }
 
 .frontpage-buttons div {
-    padding: 1em;
-    background: $blue;
+	padding: 1em;
+	background: $blue;
 }
 .navCollapsed .page {
-    -ms-transform: translate(0px, 0);
-    -moz-transform: translate(0px, 0);
-    -webkit-transform: translate3d(0px, 0, 0);
-    transform: translate(0px, 0);
+	-ms-transform: translate(0px, 0);
+	-moz-transform: translate(0px, 0);
+	-webkit-transform: translate3d(0px, 0, 0);
+	transform: translate(0px, 0);
 }
 .page {
-    -ms-transform: translate(150px, 0);
-    -moz-transform: translate(150px, 0);
-    -webkit-transform: translate3d(150px, 0, 0);
-    transform: translate(150px, 0);
-    -ms-transition: -ms-transform 0.28s ease-in-out;
-    -moz-transition: -moz-transform 0.28s ease-in-out;
-    -webkit-transition: -webkit-transform 0.28s ease-in-out;
-    transition: transform 0.28s ease-in-out;
-}
-.sidebar {
-    position: fixed; 
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 200px;
-    background: $blue;
-    box-shadow: 0 0 3px #222;
-    overflow-x: hidden;
-    overflow-y: auto;
-    overflow: hidden;
-    -moz-transition: width ease-in-out 0.28s, background linear 0.1s;
-    -webkit-transition: width ease-in-out 0.28s, background linear 0.1s;
-    -o-transition: width ease-in-out 0.28s, background linear 0.1s;
-    transition: width ease-in-out 0.28s, background linear 0.1s;
-    -ms-transform: translate(0px, 0);
-    -moz-transform: translate(0px, 0);
-    -webkit-transform: translate3d(0px, 0, 0);
-    transform: translate(0px, 0);
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-
-    .navCollapsed &{
-        width: 50px;
-    }
-    ul {
-        list-style: none;
-        margin: 0;
-        width: 200px;
-
-        li a {
-            display: block;
-            color: #fff;
-            border-bottom: 1px solid #eee;
-            padding: 1em 0;
-            &:hover {
-                background: $mutedBlack;
-            }
-            &.active {
-                background: $mutedBlack;
-            }
-            i {
-                font-size: 1.6em;
-                display: block;
-                width: 2em;
-                float: left;
-                text-align: center;
-            }
-        }
-    }
+	-ms-transform: translate(150px, 0);
+	-moz-transform: translate(150px, 0);
+	-webkit-transform: translate3d(150px, 0, 0);
+	transform: translate(150px, 0);
+	-ms-transition: -ms-transform 0.28s ease-in-out;
+	-moz-transition: -moz-transform 0.28s ease-in-out;
+	-webkit-transition: -webkit-transform 0.28s ease-in-out;
+	transition: transform 0.28s ease-in-out;
 }
 .page {
-    padding-right: 0;
-    padding-left: 0;
-    background: #fff;
+	padding-right: 0;
+	padding-left: 0;
+	background: #fff;
 }
 
 .hex {
-    display: inline-block;
-    vertical-align: middle;
-  width:150px;
-  height:86px;
-  background-color: #ccc;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;     
-  background-size: auto 173px;              
-  position: relative;
-  float: none;
-margin: 24px 0px;
-  text-align:center;
-  zoom:1;
+	display: inline-block;
+	vertical-align: middle;
+	width:120px;
+	height:68px;
+	background: #ccc 50% 50% no-repeat;    
+	background-size: auto 173px;              
+	position: relative;
+	float: none;
+	margin: 24px 0px;
+	text-align:center;
+	zoom:1;
+	.hex-gap {
+		margin-left: 86px;
+	}
+	.corner-1, .corner-2 {
+		position: absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		background: inherit;                
+		z-index:-2;
+		overflow:hidden; 
+		@include backface-visibility(hidden); 
+		&:before {
+			width: 173px;
+			height: 173px;
+			content: '';
+			position: absolute;
+			background: inherit;
+			top:0; left: 0;
+			z-index: 1;
+			background: inherit;
+			background-repeat:no-repeat;
+			@include backface-visibility(hidden); 
+		}
+	}
+	.corner-1 {
+		z-index:-1;
+		@include transform(rotate(60deg));
+		&:before {
+			transform: rotate(-60deg) translate(-87px, 0px);  
+			transform-origin: 0 0;
+		}     
+	}
+	.corner-2 {
+		@include transform(rotate(-60deg));
+		&:before {
+			transform: rotate(60deg) translate(-48px, -11px); 
+			bottom:0;
+		}   
+	}
+
+	.inner {   
+		color:#eee;
+	}
+
+	&.hex-1 {
+		background: #74cddb;
+	}
+
+	&.hex-2 {
+		background: #f5c53c;
+	}
+
+	&.hex-3 {
+		background: #ddd;
+	}
 }
-    
-.hex.hex-gap {
-margin-left: 86px;
-}
-
-.hex a {
-display:block;
-width: 100%;
-height:100%;
-text-indent:-9999em;
-position:absolute;
-top:0;
-left:0;
-}
-
-.hex .corner-1,
-.hex .corner-2 {
-position: absolute;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background: inherit;                
-z-index:-2;           
-overflow:hidden;    
-    -webkit-backface-visibility: hidden;
--moz-backface-visibility: hidden;
--ms-backface-visibility: hidden;
--o-backface-visibility: hidden;
-backface-visibility: hidden;       
-}
-
-.hex .corner-1 {
-z-index:-1;
--webkit-transform: rotate(60deg);
--moz-transform: rotate(60deg);
--ms-transform: rotate(60deg);
--o-transform: rotate(60deg);
-transform: rotate(60deg);
-}
-
-.hex .corner-2 {
--webkit-transform: rotate(-60deg);
--moz-transform: rotate(-60deg);
--ms-transform: rotate(-60deg);
--o-transform: rotate(-60deg);
-transform: rotate(-60deg);
-}
-
-.hex .corner-1:before,
-.hex .corner-2:before {
-width: 173px;
-height: 173px;
-content: '';
-position: absolute;
-background: inherit;
-top:0;
-left: 0;
-z-index: 1;
-background: inherit;
-background-repeat:no-repeat;
--webkit-backface-visibility: hidden;
--moz-backface-visibility: hidden;
--ms-backface-visibility: hidden;
--o-backface-visibility: hidden;
-backface-visibility: hidden;        
-}     
-
-
-.hex .corner-1:before {
-transform: rotate(-60deg) translate(-87px, 0px);  
-transform-origin: 0 0;
-}     
-
-.hex .corner-2:before {
-transform: rotate(60deg) translate(-48px, -11px); 
-bottom:0;
-}   
-
-
 
 /* Custom styles*/
-.hex .inner {   
-color:#eee;
-}
-
-.hex h4 {
-font-family: 'Josefin Sans', sans-serif;    
-margin:0;    
-margin-top: 1.5em;
-text-align: center; 
-}
-
-.hex hr {
-border:0;
-border-top:1px solid #eee;
-width:60%;
-margin:15px auto;
-}
-
-.hex p {
-font-size:16px;
-font-family: 'Kotta One', serif;
-width:80%;
-margin:0 auto;
-}
-
-.hex.hex-1 {
-background: #74cddb;
-}
-
-.hex.hex-2 {
-background: #f5c53c;
-}
-
-.hex.hex-3 {
-background: #80b971;
-}
-
-
 
 .subjects {
-    margin-top: 2em;
-    text-align: center; 
-    padding-left: 0; 
+	margin-top: 2em;
+	h2 {
+		margin-bottom: 1.5em;
+		border-bottom: 1px dotted $blue;
+		font-size: 1.5em;
+	}
+	.hex-item {
+		//float: left;
+		display: block;
+		float: left;
+		text-align: center;
+		margin-bottom: 2em;
+		max-width: 120px;
+		margin-right: 0.3em;
+		.hex {
+			margin-bottom: 3em; 
+		} 
+	}
+	.subject-group {
+		overflow: hidden;
+		//margin-bottom: 2em;
+	}
 
-    ul {
-        list-style: none;
-        li {
-            margin: 0;
-            a {
-                font-size: 1.2rem;
-                border-bottom: 1px dotted #ddd;
-                color: #777;
-            }        
-        }
-        .subject {
-            ul {
-                list-style: none;
-                border-left: 5px solid #ddd;
-                margin-left: 0;
-                a {
-                    padding: 0.2em 0.5em;
-                }
-            }
-            &.science ul{
-                border-color: $linkColor;
-            }
-            &.language ul{
-                border-color: $blue;
-            }
-            &.active ul {
-                border-color: $orange;
-            }
-            &.humanist ul {
-                border-color: $mutedBlack;
-            }
-        }
-    }
+	ul {
+		list-style: none;
+		li {
+			margin: 0;
+			a {
+				font-size: 1.2rem;
+				border-bottom: 1px dotted #ddd;
+				color: #777;
+			}        
+		}
+		.subject {
+			ul {
+				list-style: none;
+				border-left: 5px solid #ddd;
+				margin-left: 0;
+				a {
+					padding: 0.2em 0.5em;
+				}
+			}
+			&.science ul{
+				border-color: $linkColor;
+			}
+			&.language ul{
+				border-color: $blue;
+			}
+			&.active ul {
+				border-color: $orange;
+			}
+			&.humanist ul {
+				border-color: $mutedBlack;
+			}
+		}
+	}
 }
 #homePage {
-    header {
-        background: url(/images/bazaar.jpg);
-        h1, h2 {
-            color: #fff;
-            text-align: center;
-        }
-        .search {
-            display: block;
-            padding: 1em;
-            border-radius: 0.5em;
-            width: 30em;
-            margin: 0 auto;
-        }
-    }
+	header {
+		background: #8DE1F8;
+		h1, h2 {
+			color: #132335;
+			text-align: center;
+			font-weight: 400;
+		}
+		h2 {
+			font-size: 1.2em;
+			margin-bottom: 2em;
+		}
+		.search {
+			display: block;
+			padding: 1em;
+			border-radius: 0.5em;
+			width: 30em;
+			margin: 0 auto;
+		}
+	}
+	#owl-demo .item{
+	  margin: 3px;
+	}
+	#owl-demo .item img{
+	  display: block;
+	  width: 100%;
+	  height: auto;
+	}
+}
+.item-list {
+	list-style: none;
+	li {
+		padding: 1em 0;
+		border-bottom: 1px dotted #ddd;
+		overflow: hidden;
+	}
+	.hex {
+		width: 76px;
+		height: 45px;
+	}
+	h3 {
+		margin-bottom: 0;
+	}
+	&.horizontal {
+		height: 200px;
+		overflow: hidden;
+		li {
+			height: 200px;
+			margin-right: 1em;
+			float: left;
+			width: 30%;
+		}
+	}
+}
+#subjectPage {
+	header {
+		overflow: hidden;
+		height: 130px;
+		a, h1 {
+			color: #fff;
+		}
+	}
+	.header-image {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 130px;
+	}
 }
 #itemPage {
-    .search {
-        position: absolute;
-        top: 1em;
-        right: 1em;
-        font-size: 2em;
-    }
-    .background {
-        background: #DBDBDB;
-    }
-    header {
-        padding: 3em 0 5em;
-        margin-bottom: 3em;
-        h1 {
-            color: #777;
-            margin-bottom: 0;
-        }
-        .rating, .specs {
-            color: #777;
-        }
-    }
 
-    .toprow {
-        //margin-bottom: 2em;
-        padding-bottom: 2em;
-        .item-picture {
-            background: url("http://upload.wikimedia.org/wikipedia/commons/2/24/Gorilla_gorilla11.jpg"); 
-            height: 23em;
-            border-radius: 3px;
-            margin-bottom: 2em;
-        }
+	.search {
+		position: absolute;
+		top: 1em;
+		right: 1em;
+		font-size: 2em;
+	}
+	.background {
+		background: #DBDBDB;
+	}
+	header {
+		padding: 3em 0 5em;
+		margin-bottom: 3em;
+		h1 {
+			color: #777;
+			margin-bottom: 0;
+		}
+		.rating, .specs {
+			color: #777;
+		}
+	}
 
-        ul {
-            padding: 1em;
-            
-            border-radius: 3px;
-            list-style-type: none;
-            margin-left: 0;
-            background: lighten($blue, 30%);
-            border: 1px solid #fff;
-            li {
-                 color: #888;
-            }
-        }
-    }
-    aside {
-        h3 {
-            border-bottom: 1px solid #aaa;
-        }
-        p {
-            font-size: 1.2em;
-            //padding: 1em;
-            color: #444;
-        }
-    }
-    .left-col {
-        padding-top: 2em;
-        padding-bottom: 2em;
-        border-right: 2px solid $blue;
-        background: #EFF7FF;
-    }
+	.toprow {
+		//margin-bottom: 2em;
+		padding-bottom: 2em;
+		.item-picture {
+			background: url("http://upload.wikimedia.org/wikipedia/commons/2/24/Gorilla_gorilla11.jpg"); 
+			height: 23em;
+			border-radius: 3px;
+			margin-bottom: 2em;
+		}
+
+		ul {
+			padding: 1em;
+			
+			border-radius: 3px;
+			list-style-type: none;
+			margin-left: 0;
+			background: lighten($blue, 30%);
+			border: 1px solid #fff;
+			li {
+				 color: #888;
+			}
+		}
+	}
+	aside {
+		h3 {
+			border-bottom: 1px solid #aaa;
+		}
+		p {
+			font-size: 1.2em;
+			//padding: 1em;
+			color: #444;
+		}
+	}
+	.left-col {
+		padding-top: 2em;
+		padding-bottom: 2em;
+		border-right: 2px solid $blue;
+		background: #EFF7FF;
+	}
 }
