--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,19 +9,20 @@ $mutedBlack: #333;
 
 @import 'foundation';
 @import 'compass';
-//@import 'iconfont/style.css';
+
+// Custom css
+@import 'layout';
+@import 'type';
 @import 'navigation';
+@import 'ui';
+
+// Page specific css
+@import 'subjectPage';
+@import 'itemPage';
 
 // bower:scss
 // endbower
-p {
-	color: #444;
-}
-body {
-	min-width: 100%;
-	height: 100%;
-	padding-left: 50px;
-}
+
 .top-bar {
 	select {
 		margin-top: 0.3em;
@@ -34,28 +35,8 @@ body {
 	 color: #fff; 
 	}
 }
-header {
-	padding: 2em 0;
-	.breadcrumb {
-		color: $blue;
-		i {
-			position: relative;
-			top: 1px;
-			margin-left: 0.5em;
-		}
-	}
-	h1 {
-		margin-top: -0.1em;
-	}
-	&.row .back {
-		i {
-			font-size: 5em;
-		}
-	}
-}
-.row {
-   max-width: 1300px;
-}
+
+
 .browsehappy {
 	margin: 0.2em 0;
 	background: #ccc;
@@ -67,98 +48,7 @@ header {
 	padding: 1em;
 	background: $blue;
 }
-.navCollapsed .page {
-	-ms-transform: translate(0px, 0);
-	-moz-transform: translate(0px, 0);
-	-webkit-transform: translate3d(0px, 0, 0);
-	transform: translate(0px, 0);
-}
-.page {
-	-ms-transform: translate(150px, 0);
-	-moz-transform: translate(150px, 0);
-	-webkit-transform: translate3d(150px, 0, 0);
-	transform: translate(150px, 0);
-	-ms-transition: -ms-transform 0.28s ease-in-out;
-	-moz-transition: -moz-transform 0.28s ease-in-out;
-	-webkit-transition: -webkit-transform 0.28s ease-in-out;
-	transition: transform 0.28s ease-in-out;
-}
-.page {
-	padding-right: 0;
-	padding-left: 0;
-	background: #fff;
-}
 
-.hex {
-	display: inline-block;
-	vertical-align: middle;
-	width:120px;
-	height:68px;
-	background: #ccc 50% 50% no-repeat;    
-	background-size: auto 173px;              
-	position: relative;
-	float: none;
-	margin: 24px 0px;
-	text-align:center;
-	zoom:1;
-	.hex-gap {
-		margin-left: 86px;
-	}
-	.corner-1, .corner-2 {
-		position: absolute;
-		top:0;
-		left:0;
-		width:100%;
-		height:100%;
-		background: inherit;                
-		z-index:-2;
-		overflow:hidden; 
-		@include backface-visibility(hidden); 
-		&:before {
-			width: 173px;
-			height: 173px;
-			content: '';
-			position: absolute;
-			background: inherit;
-			top:0; left: 0;
-			z-index: 1;
-			background: inherit;
-			background-repeat:no-repeat;
-			@include backface-visibility(hidden); 
-		}
-	}
-	.corner-1 {
-		z-index:-1;
-		@include transform(rotate(60deg));
-		&:before {
-			transform: rotate(-60deg) translate(-87px, 0px);  
-			transform-origin: 0 0;
-		}     
-	}
-	.corner-2 {
-		@include transform(rotate(-60deg));
-		&:before {
-			transform: rotate(60deg) translate(-48px, -11px); 
-			bottom:0;
-		}   
-	}
-
-	.inner {   
-		color:#eee;
-	}
-
-	&.hex-1 {
-		background: #74cddb;
-	}
-
-	&.hex-2 {
-		background: #f5c53c;
-	}
-
-	&.hex-3 {
-		background: #ddd;
-	}
-}
 
 /* Custom styles*/
 
@@ -247,109 +137,5 @@ header {
 	  display: block;
 	  width: 100%;
 	  height: auto;
-	}
-}
-.item-list {
-	list-style: none;
-	li {
-		padding: 1em 0;
-		border-bottom: 1px dotted #ddd;
-		overflow: hidden;
-	}
-	.hex {
-		width: 76px;
-		height: 45px;
-	}
-	h3 {
-		margin-bottom: 0;
-	}
-	&.horizontal {
-		height: 200px;
-		overflow: hidden;
-		li {
-			height: 200px;
-			margin-right: 1em;
-			float: left;
-			width: 30%;
-		}
-	}
-}
-#subjectPage {
-	header {
-		overflow: hidden;
-		height: 130px;
-		a, h1 {
-			color: #fff;
-		}
-	}
-	.header-image {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 130px;
-	}
-}
-#itemPage {
-
-	.search {
-		position: absolute;
-		top: 1em;
-		right: 1em;
-		font-size: 2em;
-	}
-	.background {
-		background: #DBDBDB;
-	}
-	header {
-		padding: 3em 0 5em;
-		margin-bottom: 3em;
-		h1 {
-			color: #777;
-			margin-bottom: 0;
-		}
-		.rating, .specs {
-			color: #777;
-		}
-	}
-
-	.toprow {
-		//margin-bottom: 2em;
-		padding-bottom: 2em;
-		.item-picture {
-			background: url("http://upload.wikimedia.org/wikipedia/commons/2/24/Gorilla_gorilla11.jpg"); 
-			height: 23em;
-			border-radius: 3px;
-			margin-bottom: 2em;
-		}
-
-		ul {
-			padding: 1em;
-			
-			border-radius: 3px;
-			list-style-type: none;
-			margin-left: 0;
-			background: lighten($blue, 30%);
-			border: 1px solid #fff;
-			li {
-				 color: #888;
-			}
-		}
-	}
-	aside {
-		h3 {
-			border-bottom: 1px solid #aaa;
-		}
-		p {
-			font-size: 1.2em;
-			//padding: 1em;
-			color: #444;
-		}
-	}
-	.left-col {
-		padding-top: 2em;
-		padding-bottom: 2em;
-		border-right: 2px solid $blue;
-		background: #EFF7FF;
 	}
 }
