--- a/app/views/music.html
+++ b/app/views/music.html
@@ -10,6 +10,7 @@
 		</div>
 		<div class="small-3 columns">
 			<input type="text" placeholder="Search within music..">
+			<a>Filters..</a>
 		</div>
 	</header>
 	<tabset>
@@ -31,8 +32,15 @@
 							
 						 
 							<div class="medium-12 columns">
-								<h4>Latest posts in the magazine</h4>
-								<ul>
+								<h4>Latest blog posts related to Music</h4>
+								<ul class="post-list">
+									<li></li>
+									<li></li>
+									<li></li>
+									<li></li>
+								</ul>
+								<h4>Discussions under Music</h4>
+								<ul class="post-list">
 									<li></li>
 									<li></li>
 									<li></li>
