--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -59,6 +59,9 @@ $mutedBlack: #333;
 		border-bottom: 1px dotted $blue;
 		font-size: 1.5em;
 	}
+	h3 {
+		font-size: 1.3em;
+	}
 	.hex-item {
 		//float: left;
 		display: block;
