--- a/app/styles/iconfont/style.css
+++ b/app/styles/iconfont/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-n7epiw');
-	src:url('fonts/icomoon.eot?#iefix-n7epiw') format('embedded-opentype'),
-		url('fonts/icomoon.woff?-n7epiw') format('woff'),
-		url('fonts/icomoon.ttf?-n7epiw') format('truetype'),
-		url('fonts/icomoon.svg?-n7epiw#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-m45jnr');
+	src:url('fonts/icomoon.eot?#iefix-m45jnr') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-m45jnr') format('woff'),
+		url('fonts/icomoon.ttf?-m45jnr') format('truetype'),
+		url('fonts/icomoon.svg?-m45jnr#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,29 +23,47 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-help:before {
-	content: "\e600";
+.icon-message:before {
+	content: "\e639";
 }
-.icon-mail:before {
-	content: "\e601";
+.icon-messages:before {
+	content: "\e63a";
 }
-.icon-paperclip:before {
-	content: "\e602";
+.icon-msg-line:before {
+	content: "\e638";
 }
-.icon-reply:before {
-	content: "\e603";
+.icon-heart:before {
+	content: "\e633";
 }
-.icon-forward:before {
-	content: "\e604";
+.icon-heart2:before {
+	content: "\e634";
 }
-.icon-user:before {
-	content: "\e605";
+.icon-plus:before {
+	content: "\e630";
 }
-.icon-users:before {
-	content: "\e606";
+.icon-minus:before {
+	content: "\e631";
 }
-.icon-user-add:before {
-	content: "\e607";
+.icon-notice:before {
+	content: "\e632";
+}
+.icon-tag2:before {
+	content: "\e62f";
+}
+.icon-music:before {
+	content: "\e635";
+}
+.icon-dice:before {
+	content: "\e636";
+}
+.icon-books:before {
+	content: "\e637";
+}
+.icon-house:before {
+	content: "\e60c";
+}
+.icon-download:before {
+	content: "\e615";
 }
 .icon-star:before {
 	content: "\e608";
@@ -56,50 +74,59 @@
 .icon-thumbsup:before {
 	content: "\e60a";
 }
-.icon-thumbsdown:before {
-	content: "\e60b";
+.icon-cog:before {
+	content: "\e60e";
 }
-.icon-house:before {
-	content: "\e60c";
+.icon-mail:before {
+	content: "\e601";
+}
+.icon-user-add:before {
+	content: "\e607";
+}
+.icon-users:before {
+	content: "\e606";
+}
+.icon-user:before {
+	content: "\e605";
+}
+.icon-reply:before {
+	content: "\e603";
+}
+.icon-forward:before {
+	content: "\e604";
+}
+.icon-paperclip:before {
+	content: "\e602";
 }
 .icon-printer:before {
 	content: "\e60d";
 }
-.icon-cog:before {
-	content: "\e60e";
+.icon-thumbsdown:before {
+	content: "\e60b";
+}
+.icon-music2:before {
+	content: "\e610";
 }
 .icon-tag:before {
 	content: "\e60f";
 }
-.icon-music:before {
-	content: "\e610";
-}
 .icon-screen:before {
 	content: "\e611";
-}
-.icon-lock:before {
-	content: "\e612";
 }
 .icon-lock-open:before {
 	content: "\e613";
 }
+.icon-lock:before {
+	content: "\e612";
+}
 .icon-cycle:before {
 	content: "\e614";
-}
-.icon-download:before {
-	content: "\e615";
-}
-.icon-cloud:before {
-	content: "\e616";
 }
 .icon-upload:before {
 	content: "\e617";
 }
-.icon-play:before {
-	content: "\e618";
-}
-.icon-pause:before {
-	content: "\e619";
+.icon-cloud:before {
+	content: "\e616";
 }
 .icon-arrow-left:before {
 	content: "\e61a";
@@ -158,27 +185,18 @@
 .icon-facebook:before {
 	content: "\e62c";
 }
+.icon-play:before {
+	content: "\e618";
+}
+.icon-pause:before {
+	content: "\e619";
+}
 .icon-book:before {
 	content: "\e62d";
 }
 .icon-support:before {
 	content: "\e62e";
 }
-.icon-tag2:before {
-	content: "\e62f";
-}
-.icon-plus:before {
-	content: "\e630";
-}
-.icon-minus:before {
-	content: "\e631";
-}
-.icon-notice:before {
-	content: "\e632";
-}
-.icon-heart:before {
-	content: "\e633";
-}
-.icon-heart2:before {
-	content: "\e634";
+.icon-help:before {
+	content: "\e600";
 }
