--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -18,6 +18,24 @@ $mutedBlack: #333;
 	}
 }
 
+.topnav {
+	z-index: 100;
+	background: rgba(255,255,255,0.9);
+	border-radius: 2px;
+	overflow: hidden;
+	padding: 0.3em;
+	position: relative;
+	ul {
+		float: right;
+		list-style: none;
+		margin: 0;
+		li {
+			margin-right: 1em;
+			float: left;
+		}
+	}
+}
+
 .sidebar {
 	position: fixed;
 	top: 0;
@@ -68,7 +86,8 @@ $mutedBlack: #333;
 	border-bottom: 2px solid #ddd;
 }
 .tabs dd.active a {
-	background: #ddd !important;
+	border-color: #FFAD00 !important;
+	font-weight: 400;
 }
 #authorTab, #personalTab {
 	float: right;
