--- a/app/styles/_subjectPage.scss
+++ b/app/styles/_subjectPage.scss
@@ -3,7 +3,8 @@
 #subjectPage {
 	header {
 		overflow: hidden;
-		height: 130px;
+		height: 133px;
+		background: #4FC8F8;
 		a, h1 {
 			color: #fff;
 		}
@@ -13,12 +14,48 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 130px;
+		height: 170px;
+		opacity: 0.2;
+		-webkit-filter: grayscale(100%);
+	}
+	.carousel {
+		height: 22em; 
+		margin-bottom: 3em; 
+		overflow: hidden; 
+		background: #eee;
 	}
 	.right-col {
 		section {
 			margin-bottom: 1em;
+			border-bottom: 6px solid #61D3FF;
 			@extend .clearfix; 
+		}
+		h3 {
+			margin-top: 0;
+		}
+	}
+	.hex {
+		margin-bottom: 0;
+	}
+	#topicsTab {
+		.hex-item {
+			margin-right: 1em;
+			.hex {
+				margin-bottom: 3em;
+			}
+		}
+	}
+	&.topic {
+		header {
+			h1, a {
+				color: #444;
+			}
+		}
+		.item-list li {
+			height: 14em;
+			.type, .author {
+				display: block; 
+			}
 		}
 	}
 }
