--- a/app/views/music.html
+++ b/app/views/music.html
@@ -1,6 +1,6 @@
 <div ng-controller="SubjectCtrl" id="subjectPage">
 	<header>
-		<img class="header-image" src="images/drums_130.jpg"  height="130">
+		<img class="header-image" src="images/drums_130.jpg" >
 		<div class="small-1 columns back">
 			<a href="#/home"><i class="icon-arrow-left"></i></a>
 		</div>
@@ -9,7 +9,7 @@
 			<h1>Music</h1>
 		</div>
 		<div class="small-3 columns">
-			<input type="text" placeholder="Search within music..">
+			<input type="text" class="search" placeholder="Search within music..">
 		</div>
 	</header>
 	  
@@ -55,13 +55,22 @@
   </div>
 	<tabset>
 		<tab heading="Home">
+			<div class="row">
 				<div class="medium-8 columns">
-					<div style="height: 30em; margin-bottom: 1em; overflow: hidden; background: #eee;">
-						<img src="http://ovelin.com/wp-content/uploads/2013/04/GB_SocialProfile01.jpeg">
+					<div class="carousel">
+						<img src="/images/GB_PracticeMode.jpg">
+						<div class="caption">
+							<h1>Guitar Bots</h1>
+							<div class="info">
+								<span class="autor"><a href="#">Ovelin</a></span>
+							</div>
+							<p>This is a cool text related the product</p>
+
+						</div>
 					</div>
 					<div class="row">
 						<ul class="item-list horizontal simple"> 
-							<h2 class="small-12 columns">New arrivals</h2>							
+							<h2>New arrivals</h2>							
 							<li class="row">
 								<div class="medium-12 columns">
 									<a href="#/music" class="hex-item">
@@ -130,7 +139,7 @@
 					</div>
 					<div class="row">
 						<ul class="item-list horizontal simple"> 
-							<h2 class="small-12 columns">Most downloaded</h2>							
+							<h2>Most downloaded</h2>							
 							<li class="row">
 								<div class="medium-12 columns">
 									<a href="#/music" class="hex-item">
@@ -202,25 +211,25 @@
 					<section>
 						<h3>Latest blog posts related to Music</h3>
 						<ul class="post-list">
-							<li>
+							<li class="row">
 								<a href="#">
-									<img src="images/post-image.jpg" class="small-3 columns">
+									<img src="images/guitar-102708_640.jpg" class="small-3 columns">
 									<div class="small-9 columns">
 										<h4>Using Rockway courses in 4th grade music teaching</h4>
 									</div>
 								</a>
 							</li>
-							<li>
+							<li class="row">
 								<a href="#">
-									<img src="images/post-image.jpg" class="small-3 columns">
+									<img src="images/concert-316464_640.jpg" class="small-3 columns">
 									<div class="small-9 columns">
 										<h4>iPad band in the Spring event - the story of our practise</h4>
 									</div>
 								</a>
 							</li>
-							<li>
+							<li class="row">
 								<a href="#">
-									<img src="images/post-image.jpg" class="small-3 columns">
+									<img src="images/piano-277277_640.jpg" class="small-3 columns">
 									<div class="small-9 columns">
 										<h4>From zero to Paranoid - How did 6th graders learned to play a song by themselves</h4>
 									</div>
@@ -278,28 +287,58 @@
 					</section>
 
 				</div>
+			</div>
 		</tab>
 		<tab heading="Topics">
-			<div class="medium-6 columns theme">
-				 <div style="background: url('/images/numbers.svg'); height: 8em; margin-bottom: 1em; color: #fff">
-					 Music theory
-				 </div>
-			</div>
-			<div class="medium-6 columns theme">
-				 <div style="background: url('/images/algebra.svg'); height: 8em; margin-bottom: 1em; color: #fff">
-						Practice
-				 </div>
-			</div>
-			<div class="medium-6 columns theme">
-				<a href="#/geometry">
-				 <div style="background: #E08A4C; height: 8em; margin-bottom: 1em; color: #fff">
-					 Music History
-				 </div></a>
-			</div>
-			<div class="medium-6 columns theme">
-				 <div style="background: #DDBE4F; height: 8em; margin-bottom: 1em; color: #fff">
-					 Listening
-				 </div>
+			<div id="topicsTab">
+				
+						<div class="small-12 columns">
+							<a href="#/music" class="hex-item">
+								<div class="hex hex-3">   
+									<div class="inner">
+									</div>    
+									<div class="corner-1"></div>
+									<div class="corner-2"></div>    
+								</div> 
+								<h3>Practise</h3>
+							</a>
+							<a href="#" class="hex-item">
+								<div class="hex hex-3">   
+									<div class="inner">
+									</div>    
+									<div class="corner-1"></div>
+									<div class="corner-2"></div>    
+								</div> 
+								<h3>Listening</h3>
+							</a>
+							<a href="#/music-theory" class="hex-item">
+								<div class="hex hex-3">   
+									<div class="inner">
+									</div>    
+									<div class="corner-1"></div>
+									<div class="corner-2"></div>    
+								</div> 
+								<h3>Music theory</h3>
+							</a>
+							<a href="#" class="hex-item">
+								<div class="hex hex-3">   
+									<div class="inner">
+									</div>    
+									<div class="corner-1"></div>
+									<div class="corner-2"></div>    
+								</div> 
+								<h3>Music History</h3>
+							</a>
+							<a href="#" class="hex-item">
+								<div class="hex hex-3">   
+									<div class="inner">
+									</div>    
+									<div class="corner-1"></div>
+									<div class="corner-2"></div>    
+								</div> 
+								<h3>Composing & Creating</h3>
+							</a>
+						</div>
 			</div>
 		</tab>
 		<tab heading="Tags">
@@ -307,8 +346,6 @@
 		<tab heading="Filters">
 		</tab>
 		<tab heading="Forum">
-		</tab>
-		<tab heading="Your bookmarks" class="right">
 		</tab>
 
 </div>
